# wall_painting_robotic_arm

./: README.md
moveit_resources-ros2/arm/: package.xml  setup.py
moveit_resources-ros2/hello_moveit/: CMakeLists.txt
moveit_resources-ros2/hello_moveit/src/: hello_moveit_v2.cpp  plan_around_objects.cpp
moveit_resources-ros2/install/: local_setup.sh  setup.sh
moveit_resources-ros2/install/arm/lib/arm/: add_wall
moveit_resources-ros2/install/arm/share/arm/: package.sh
moveit_resources-ros2/install/dual_arm_panda_moveit_config/share/dual_arm_panda_moveit_config/: local_setup.sh  package.sh
moveit_resources-ros2/install/hello_moveit/lib/hello_moveit/: hello_moveit_v2  plan_around_objects
moveit_resources-ros2/install/hello_moveit/share/hello_moveit/: local_setup.sh  package.sh
moveit_resources-ros2/install/moveit_resources/share/moveit_resources/: package.sh
moveit_resources-ros2/install/moveit_resources_fanuc_description/share/moveit_resources_fanuc_description/: package.sh
moveit_resources-ros2/install/moveit_resources_fanuc_moveit_config/share/moveit_resources_fanuc_moveit_config/: package.sh
moveit_resources-ros2/install/moveit_resources_panda_description/share/moveit_resources_panda_description/: package.sh
moveit_resources-ros2/install/moveit_resources_panda_moveit_config/share/moveit_resources_panda_moveit_config/: local_setup.sh  package.sh
moveit_resources-ros2/install/moveit_resources_pr2_description/share/moveit_resources_pr2_description/: package.sh
moveit_resources-ros2/install/moveit_task_constructor_core/share/moveit_task_constructor_core/: local_setup.sh  package.sh
moveit_resources-ros2/install/moveit_task_constructor_msgs/share/moveit_task_constructor_msgs/: package.sh
moveit_resources-ros2/install/panda_gazebo/share/panda_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
moveit_resources-ros2/install/panda_gazebo/share/panda_gazebo/launch/: controller.launch.py  empty_world.launch.py  rsp.launch.py
moveit_resources-ros2/install/panda_gazebo/share/panda_gazebo/urdf/: camera.urdf  intel_rgbd_cam_d435.urdf.xacro  panda.urdf.xacro
moveit_resources-ros2/log/: latest_build
moveit_resources-ros2/mycobot_mtc_demos/src/: fallbacks_move_to.cpp
moveit_resources-ros2/panda_gazebo/: setup.cfg  setup.py
moveit_resources-ros2/panda_moveit_config/: package.xml
moveit_resources-ros2/panda_moveit_config/launch/: move_group.launch.py
(+17 files in other folders)
