<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>arm</name>
<version>0.0.0</version>
<description>TODO: Package description</description>
<maintainer email="laxmi-arz-i006@todo.todo">laxmi-arz-i006</maintainer>
<license>TODO: License declaration</license>
<depend>rclpy</depend>
<depend>controller_manager</depend>
<depend>gripper_controllers</depend>
<depend>gz_ros2_control</depend>
<depend>python3-numpy</depend>
<depend>rclcpp</depend>
<depend>ros_gz</depend>
<depend>ros_gz_bridge</depend>
<depend>ros_gz_image</depend>
<depend>ros_gz_sim</depend>
<depend>ros2_control</depend>
<depend>ros2_controllers</depend>
<depend>trajectory_msgs</depend>
<depend>moveit_commander</depend>

<depend>xacro</depend>
<exec_depend>gz_ros2_control_demos</exec_depend>
<test_depend>ament_copyright</test_depend>
<test_depend>ament_flake8</test_depend>
<test_depend>ament_pep257</test_depend>
<test_depend>python3-pytest</test_depend>
<test_depend>moveit_commander</test_depend>

<export>
<build_type>ament_python</build_type>
</export>
</package>
